<resources>
    <string name="app_name">Jeneponto</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="home">Beranda</string>
    <string name="visit">Wisata Ke Jeneponto</string>
    <string name="invest">Peluang Investasi</string>
    <string name="allow">Prosedur Perizinan</string>
    <string name="something">Energi</string>
    <string name="track">Tracking Perizinan</string>
    <string name="retribution">Kalkulator Retribusi</string>
    <string name="feedback">Keluhan Warga</string>
    <string name="contactUs">Hubungi Kami</string>
    <string name="language">Pengaturan Bahasa</string>
    <string name="headOffice"><b>Head Office</b>\nJl. Lingkar No. 30 Bontosunggu, Kabupaten Jeneponto, Sulawesi Selatan.</string>
    <string name="OfficeHours"><b>Website</b>\nVisitjeneponto.id</string>
    <string name="OfficeHours2"><b>Telp.</b>\n+62419-2410044</string>
    <string name="sure">Apa Anda Yakin Ingin Keluar?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="fitur">Maaf Fitur Ini Belun Tersedia !</string>
    <string name="text_izin">Pilih Perizinan :</string>
    <string name="text_tenaga_kerja">Jumlah Tenaga Kerja :</string>
    <string name="ket_tenaga_kerja">Perhitungan Retribusi :\nUSD 100 x jumlah jabatan tenaga kerja</string>
    <string name="ket_gedung_baru"><b>Perhitungan : L x It x 1.00 x HSbg</b>\n\nL = Luas lantai bangunan gedung\nV = Volume/besaran (dalam satuan m2, m, dan unit)\nI = Indeks\nIt = Indeks terintegrasi\nTk = Tingkat kerusakan (0.45 untuk tingkat kerusakan sedang, 0.65 untuk tingkat kerusakan berat)\n1.00 = Indeks pembangunan baru\nHSbg = Harga satuan retribusi bangunan gedung (hanya 1 tarif setiap kabupaten)</string>
    <string name="ket_renovasi_gedung"><b>Perhitungan : L x It x Tk x HSbg</b>\n\nL = Luas lantai bangunan gedung\nV = Volume/besaran (dalam satuan m2, m, dan unit)\nI = Indeks\nIt = Indeks terintegrasi\nTk = Tingkat kerusakan (0.45 untuk tingkat kerusakan sedang, 0.65 untuk tingkat kerusakan berat)\n1.00 = Indeks pembangunan baru\nHSbg = Harga satuan retribusi bangunan gedung (hanya 1 tarif setiap kabupaten)</string>
    <string name="ket_bukan_gedung_baru"><b>Perhitungan : V x I x 1.00 x HSbg</b>\n\nL = Luas lantai bangunan gedung\nV = Volume/besaran (dalam satuan m2, m, dan unit)\nI = Indeks\nIt = Indeks terintegrasi\nTk = Tingkat kerusakan (0.45 untuk tingkat kerusakan sedang, 0.65 untuk tingkat kerusakan berat)\n1.00 = Indeks pembangunan baru\nHSbg = Harga satuan retribusi bangunan gedung (hanya 1 tarif setiap kabupaten)</string>
    <string name="ket_rehabilitasi_prasarana"><b>Perhitungan : V x I x Tk x HSbg\n\n</b>L = Luas lantai bangunan gedung\nV = Volume/besaran (dalam satuan m2, m, dan unit)\nI = Indeks\nIt = Indeks terintegrasi\nTk = Tingkat kerusakan (0.45 untuk tingkat kerusakan sedang, 0.65 untuk tingkat kerusakan berat)\n1.00 = Indeks pembangunan baru\nHSbg = Harga satuan retribusi bangunan gedung (hanya 1 tarif setiap kabupaten)</string>
    <string name="ket_imb">L = Luas lantai bangunan gedung\nV = Volume/besaran (dalam satuan m2, m, dan unit)\nI = Indeks\nIt = Indeks terintegrasi\nTk = Tingkat kerusakan (0.45 untuk tingkat kerusakan sedang, 0.65 untuk tingkat kerusakan berat)\n1.00 = Indeks pembangunan baru\nHSbg = Harga satuan retribusi bangunan gedung (hanya 1 tarif setiap kabupaten)
    </string>
    <string name="cekKoneksi">Koneksi tidak tersedia\nSilahkan aktifkan terlebih dahulu!</string>
    <string-array name="izin_pertama">
        <item>Pilih Jenis Izin</item>
        <item>Perpanjangan Izin Memperkerjakan Tenaga Kerja Asing</item>
        <item>Izin Mendirikan Bangunan</item>
        <item>Izin Usaha Perikanan</item>
    </string-array>
    <string-array name="izin_imb">
        <item>Pilih Jenis Retribusi</item>
        <item>Retribusi pembangunan gedung baru</item>
        <item>Retribusi rehabilitasi/renovasi bangunan gedung</item>
        <item>Retribusi pembangunan bukan gedung baru atau prasarana bangunan gedung</item>
        <item>Retribusi rehabilitasi prasarana bangunan gedung</item>
    </string-array>
    <string-array name="Tk">
        <item>Pilih tingkat kerusakan</item>
        <item>0.45</item>
        <item>0.65</item>
    </string-array>
    <string-array name="HSbg">
        <item>Pilih Jenis Bangunan</item>
        <item>Bangunan gedung tidak bertingkat sederhana (Rp. 6000 permeter persegi)</item>
        <item>Bangunan gedung tidak bertingkat (Rp. 12.000 permeter persegi)</item>
        <item>Bangunan gedung bertingkat (Rp. 18.000 permeter persegi)</item>
    </string-array>
    <string-array name="jenis_perikanan">
        <item>Pilih jenis perikanan</item>
        <item>Ikan air tawar</item>
        <item>Ikan air payau</item>
        <item>Usaha perikanan penangkapan ikan</item>
        <item>Usaha kapal pengangkutan ikan</item>
    </string-array>
    <string-array name="perikanan_tawar">
        <item>Pilih metode perikanan air tawar</item>
        <item>Pembenihan ikan dengan luas 0,75 ha atau lebih</item>
        <item>Pembenihan ikan dengan luas 2 ha atau lebih</item>
        <item>Pembenihan ikan lebih dari 5 unit</item>
        <item>Usaha keramba jaring apung lebih dari 4 unit</item>
        <item>Usaha keramba lebih dari 50 unit</item>
    </string-array>
    <string name="ket_tawar1">Usaha pembenihan/pendederan ikan dengan luas 0,75 ha atau lebih\n\n<b>Perhitungan : Rp 100.000 x luas lahan (dalam hectare)</b></string>
    <string name="ket_tawar2">Usaha pembekalan di kolam air tenang dengan luas lahan 2 ha atau lebih\n\n<b>Perhitungan : Rp 100.000 x luas lahan (dalam hectare)</b></string>
    <string name="ket_tawar3">Usaha pembekalan di kolam air deras lebih dari 5 unit, dengan ketentuan 1 unit = 100 m2\n\n<b>Perhitungan : Rp 150 x luas unit (dalam meter persegi)</b></string>
    <string name="ket_tawar4">Usaha keramba jaring apung lebih dari 4 unit, dengan ketentuan 1 unit = (4x7x7x2,5 m3)\n\n<b>Perhitungan : Rp 15.000 x luas unit (dalam meter persegi)</b></string>
    <string name="ket_tawar5">Usaha keramba lebih dari 50 unit, dengan ketentuan 1 unit = 4x2x1.5 m3\n\n<b>Perhitungan : Rp 150 x luas unit (dalam meter persegi)</b></string>
    <string name="luas_lahan">Luas Lahan : </string>
    <string name="luas_unit">Luas Unit : </string>
    <string name="luas_lepas_dasar">Luas Lepas Dasar : </string>
    <string name="luas_longline">Luas Long Line : </string>
    <string name="luas_usaha_rakit_apung">Luas Usaha\nRakit Apung : </string>
    <string-array name="perikanan_payau">
        <item>Pilih metode perikanan air payau</item>
        <item>Pembenihan ikan dengan luas 0,5 ha atau lebih</item>
        <item>Pembesaran ikan dengan luas 5 ha atau lebih</item>
        <item>Pembudidayaan rumput laut</item>
        <item>Usaha kerang hijau</item>
    </string-array>
    <string-array name="rumput_laut">
        <item>pilih metode budidaya rumput laut</item>
        <item>Lepas dasar</item>
        <item>Rakit apung</item>
        <item>Long line</item>
    </string-array>
    <string-array name="kerang_hijau">
        <item>pilih metode usaha kerang hijau</item>
        <item>Rakit apung atau rakit tancap</item>
        <item>Long line</item>
    </string-array>
    <string name="ket_payau1">Usaha pembenihan/pendederan dengan luas lahan 0,5 ha atau lebih\n\n<b>Perhitungan : Rp 100.000 x luas lahan (dalam hectare)</b></string>
    <string name="ket_payau2">Usaha pembesaran ikan dengan luas lahan5 ha atau lebih\n\n<b>Perhitungan : Rp 100.000/ha x luas lahan (dalam hectare)</b></string>
    <string name="ket_rumput_lepas">Lepas dasar lebih dari 8 unit dengan ketentuan 1 unit = (100x5) m2\n\n<b>Perhitungan : Rp 5 x luas lepas dasar (dalam m2)</b></string>
    <string name="ket_rumput_rakit">Usaha rakit apung lebih dari 20 unit dengan ketentuan 1 unit = 20 rakit, 1 rakit = (5x2) m2\n\n<b>Perhitungan : Rp 5 x luas usaha rakit apung (dalam m2)</b></string>
    <string name="ket_rumput_longline">Long line lebih dari 2 unit dengan ketentuan 1 unit = 1 ha\n\n<b>Perhitungan : Rp 50.000 x luas long line (dalam hektar)</b></string>
    <string name="ket_kerang_rakit">Usaha rakit apung atau rakit tancap lebih dari 30 unit dengan ketentuan 1 unit = (4x4) m2\n\n<b>Perhitungan : Rp 5 x luas usaha rakit apung (dalam m2)</b></string>
    <string name="energiReload01">
        Energi terbarukan energi yang berasal dari "proses alam yang berkelanjutan", seperti tenaga surya, tenaga angin, arus air proses biologi, dan panas bumi.</string>
    <string name="energiReload02">
        Konsep energi terbarukan mulai dikenal pada tahun 1970-an, sebagai upaya untuk mengimbangi pengembangan energi berbahan bakar nuklir dan fosil. Definisi paling umum adalah sumber energi yang dapat dengan cepat dipulihkan kembali secara alami, dan prosesnya berkelanjutan. Dengan definisi ini, maka bahan bakar nuklir dan fosil tidak termasuk di dalamnya.
    </string>
    <string name="energiReload03">
    Dari definisinya, semua energi terbarukan sudah pasti juga merupakan energi berkelanjutan, karena senantiasa tersedia di alam dalam waktu yang relatif sangat panjang sehingga tidak perlu khawatir atau antisipasi akan kehabisan sumbernya. Para pengusung energi non-nuklir tidak memasukkan tenaga nuklir sebagai bagian energi berkelanjutan karena persediaan uranium-235 di alam ada batasnya, katakanlah ratusan tahun. Tetapi, para penggiat nuklir berargumentasi bahwa nuklir termasuk energi berkelanjutan jika digunakan sebagai bahan bakar di reaktor pembiak cepat (FBR: Fast Breeder Reactor) karena cadangan bahan bakar nuklir bisa "beranak" ratusan hingga ribuan kali lipat.
    Alasannya begini, cadangan nuklir yang dibicarakan para pakar energi dalam ordo puluhan atau ratusan tahun itu secara implisit dihitung dengan asumsi reaktor yang digunakan adalah reaktor biasa (umumnya tipe BWR atau PWR), yang notabene hanya bisa membakar U-235. Di satu sisi kandungan U-235 di alam tak lebih dari 0,72% saja, sisanya kurang lebih 99,28% merupakan U-238. Uranium jenis U-238 ini dalam kondisi pembakaran "biasa" (digunakan sebagai bahan bakar di reaktor biasa) tidak dapat menghasilkan energi nuklir, tetapi jika dicampur dengan U-235 dan dimasukan bersama-sama ke dalam reaktor pembiak, bersamaan dengan konsumsi/pembakaran U-235, U-238 mengalami reaksi penangkapan 1 neutron dan berubah wujud menjadi U-239. Dalam hitungan menit U-239 meluruh sambil mengeluarkan partikel beta dan kembali berubah wujud menjadi Np-239. Np-239 juga kembali meluruh sambil memancarkan partikel beta menjadi Pu-239. Pu-239 inilah, yang meski tidak tersedia di alam tetapi terbentuk sebagai hasil sampingan pembakaran U-235, memiliki kemampuan membelah diri dan menghasilkan energi sebagaimana U-235. Bisa dibayangkan jika semua U-238 yang jumlahnya ribuan kali lebih banyak daripada U-235, berhasil diubah menjadi Pu-239, berapa peningkatan terjadi jumlah bahan bakar nuklir. Hal yang serupa juga terjadi untuk atom [thorium-233] yang dengan reaksi penangkapan 1 neutron berubah wujud menjadi U-233 yang memiliki kemampuan reaksi berantai (reaksi nuklir).
    Itulah sebabnya mengapa negara-negara maju tertentu enggan meninggalkan nuklir meski risiko radioaktif yang diterimanya tidak ringan. Reaktor pembiak cepat seperti yang dimiliki oleh Korea Utara mendapat pengawasan ketat dari IAEA karena mampu memproduksi bahan bakar baru Pu-239 yang rentan disalahgunakan untuk senjata pemusnah massal.
    Di sisi lain para penentang nuklir cenderung menggunakan istilah "energi berkelanjutan" sebagai sinonim dari "energi terbarukan" untuk mengeluarkan energi nuklir dari pembahasan kelompok energi tersebut
    </string>
    <string name="ket_indeks">Indeks Pembangunan Baru = 1.00</string>
</resources>