<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/darkblue"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/middleblue"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:textAlignment="center"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/energi1"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/something"
                android:textColor="@color/teksbok"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/something"
                android:textSize="20dp"
                android:textColor="@color/greenHard"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:paddingTop="20dp"
                />
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="150dp"
                android:layout_gravity="center"
                android:layout_height="150dp"
                android:src="@drawable/baruenergi"
                />

            <TextView
                android:id="@+id/ted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/energiReload01"
                android:textSize="15dp"
                android:textColor="@color/greenHard"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/ted2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/energiReload02"
                android:textSize="15dp"
                android:textColor="@color/greenHard"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/ted3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/energiReload03"
                android:textSize="15dp"
                android:textColor="@color/greenHard"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>