<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Rcontact"
    android:animateLayoutChanges="false"
    android:background="@color/putih"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="600px"
        android:layout_marginTop="11dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.63"
            app:srcCompat="@drawable/bckg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:orientation="vertical"
        android:paddingLeft="20px"
        android:paddingRight="20px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20px">

            <ImageView
                android:id="@+id/imview3"
                android:layout_width="100px"
                android:layout_height="100px"
                app:srcCompat="@drawable/lokasi"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15px"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:text="@string/headOffice" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20px">

            <ImageView
                android:id="@+id/imview4"
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginRight="15px"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/timer" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:text="@string/OfficeHours" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv4"
            android:paddingTop="20px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OfficeHours2" />
    </LinearLayout>
</RelativeLayout>