<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/middleblue"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:textAlignment="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/kalkulator1"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Kalkulator Retribusi"
            android:textColor="@color/teksbok"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textIzin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_izin"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/izin_pertama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textIzin"
            android:entries="@array/izin_pertama"
            android:layout_marginTop="15dp">
        </Spinner>

        <LinearLayout
            android:id="@+id/linear_asing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/izin_pertama"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/text_tenaga_kerja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_tenaga_kerja"
                android:layout_below="@id/izin_pertama"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/jumlah_tenaga_kerja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/izin_pertama"
                android:background="@android:color/white"
                android:layout_marginLeft="30dp"
                android:textSize="20dp"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_imb"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/izin_pertama"
            android:visibility="gone"
            android:layout_marginTop="15dp">

            <Spinner
                android:id="@+id/menu_imb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/izin_imb">
            </Spinner>

            <TextView
                android:id="@+id/text_L_V"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textSize="15dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/input_L_V"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@android:color/white"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/text_It_I"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textSize="15dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/input_It_I"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@android:color/white"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/text_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ket_indeks"
                android:textSize="20dp"
                android:paddingTop="5dp"
                android:visibility="gone"
                android:layout_marginTop="10dp"/>

            <Spinner
                android:id="@+id/spin_Tk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/Tk"
                android:visibility="gone"
                android:layout_marginTop="10dp">
            </Spinner>

            <Spinner
                android:id="@+id/HSbg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/HSbg"
                android:layout_marginTop="10dp"
                >
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_ikan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_below="@id/izin_pertama">

            <Spinner
                android:id="@+id/spin_jenis_perikanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/jenis_perikanan"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                >
            </Spinner>

            <Spinner
                android:id="@+id/spin_perikanan_tawar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spin_jenis_perikanan"
                android:entries="@array/perikanan_tawar"
                android:visibility="gone"
                android:layout_marginTop="10dp">
            </Spinner>

            <Spinner
                android:id="@+id/spin_perikanan_payau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spin_jenis_perikanan"
                android:entries="@array/perikanan_payau"
                android:visibility="gone"
                android:layout_marginTop="10dp">
            </Spinner>

            <Spinner
                android:id="@+id/spin_rumput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spin_perikanan_payau"
                android:entries="@array/rumput_laut"
                android:visibility="gone"
                android:layout_marginTop="10dp">
            </Spinner>

            <Spinner
                android:id="@+id/spin_kerang_hijau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spin_perikanan_payau"
                android:entries="@array/kerang_hijau"
                android:visibility="gone"
                android:layout_marginTop="10dp">
            </Spinner>

            <Spinner
                android:id="@+id/spin_penangkapan_ikan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spin_jenis_perikanan"
                android:entries="@array/penangkapan_ikan"
                android:visibility="gone"
                android:layout_marginTop="10dp">
            </Spinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/spin_jenis_perikanan">
                <TextView
                    android:id="@+id/text_luas"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="15dp"
                    android:layout_marginTop="53dp"
                    android:paddingLeft="10dp"
                    android:visibility="gone"
                    />
                <EditText
                    android:id="@+id/input_luas"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="53dp"
                    android:layout_toRightOf="@id/text_luas"
                    android:textSize="15dp"
                    android:hint="masukkan jumlah luas"
                    android:inputType="numberDecimal"
                    android:background="@android:color/white"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/spin_rumput">

            <Button
                android:id="@+id/button_hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HASIL"
                android:textSize="20dp"
                android:layout_marginTop="53dp"
                />

            <TextView
                android:id="@+id/hasil_hitung"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="53dp"
                android:layout_toRightOf="@id/button_hitung"
                android:background="@android:color/white"
                android:textSize="25dp"
                />
        </LinearLayout>


        <TextView
            android:id="@+id/ket_tenaga_kerja"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/button_hitung"
            android:paddingTop="30dp"
            android:text="@string/ket_tenaga_kerja"
            android:textSize="15dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/keterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_hitung"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:textSize="15dp"/>


    </LinearLayout>

</LinearLayout>